# media-parser-client

./: .editorconfig  README.md  pyproject.toml
media_parser/: __init__.py  client.py  models.py
